# sim_cpp_example

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md  doxyfile
inc/: rectangle.h  shape.h  triangle.h
spike/: CMakeLists.txt  boost.cpp  eigen.cpp  fibonacci.cpp  matplotlib.cpp
src/: CMakeLists.txt  main.cpp  rectangle.cpp  triangle.cpp
test/: CMakeLists.txt
